--- a/feladat.html
+++ b/feladat.html
@@ -992,3 +992,21 @@ USA_OFallonSoccer kihagyva (100%), <br />
 USA_PirateCouchPotatoPatch kihagyva (100%), <br />
 USA_BuckeyesGradCap, not updated, 0.0<br />
 Germany_SmellsLikeZeeSpiritKurtCobain, <b>updated</b>, 925, <a href="https://www.munzee.com/map/u0ws1b5wm/14.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_SmellsLikeZeeSpiritKurtCobain.json" target="_blank">json</a><br />
+Poland_BirthdayCake kihagyva (100%), <br />
+Germany_WipperfurtherSternchen, not updated, 0.0<br />
+UnitedKingdom_BluewaterFlatBlueWhale, not updated, 0.0<br />
+USA_SummerSun kihagyva (100%), <br />
+USA_RosesquirrelsAutismPuzzlePiece kihagyva (100%), <br />
+USA_StLouisCardinalsOFallon kihagyva (100%), <br />
+USA_ShrewsburyNightVisionGoggles kihagyva (100%), <br />
+USA_SouthCountyChristmasTree kihagyva (100%), <br />
+USA_TucsonChess, not updated, 0.20000000000000107<br />
+USA_SpongyMemorial kihagyva (100%), <br />
+USA_StLouisParrot kihagyva (100%), <br />
+USA_ColorStPeters kihagyva (100%), <br />
+USA_MarylandHeightsMORUM kihagyva (100%), <br />
+USA_MissouriBluebird kihagyva (100%), <br />
+Canada_RichmondHillMoosemate, not updated, 0.0<br />
+USA_PiDay2023 kihagyva (100%), <br />
+USA_SpringCherryBlossom kihagyva (100%), <br />
+USA_AppleMini, <b>updated</b>, 31, <a href="https://www.munzee.com/map/9yzse4pep/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleMini.json" target="_blank">json</a><br />
