--- a/feladat.html
+++ b/feladat.html
@@ -1010,3 +1010,29 @@ Canada_RichmondHillMoosemate, not updated, 0.0<br />
 USA_PiDay2023 kihagyva (100%), <br />
 USA_SpringCherryBlossom kihagyva (100%), <br />
 USA_AppleMini, <b>updated</b>, 31, <a href="https://www.munzee.com/map/9yzse4pep/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleMini.json" target="_blank">json</a><br />
+USA_BevoMill kihagyva (100%), <br />
+USA_VanderbiltPuppy kihagyva (100%), <br />
+USA_PiecesMeeple kihagyva (100%), <br />
+USA_LogCabinQuilt kihagyva (100%), <br />
+USA_SnowmanSaintPeters kihagyva (100%), <br />
+USA_WinterDeadBranch kihagyva (100%), <br />
+USA_CandyCaneLane kihagyva (100%), <br />
+USA_MiniSnowflake2 kihagyva (100%), <br />
+USA_BirdhousesGoldfinch kihagyva (100%), <br />
+USA_PecanMini kihagyva (100%), <br />
+USA_AcornMini kihagyva (100%), <br />
+USA_MizzouTiger, not updated, 0.0<br />
+USA_CamoHeart, not updated, 0.0<br />
+USA_ColumbiaFlatLou, not updated, 0.0<br />
+USA_ColumbiaFlatLouPink, not updated, 0.0<br />
+USA_FriscoPark kihagyva (100%), <br />
+USA_GRMeijerFarm, not updated, 0.0<br />
+USA_SecondaryComplexEverything, not updated, 0.0<br />
+USA_SecondaryComplexEverythingFlats, not updated, 0.0<br />
+USA_GrandRapidsCornucopia kihagyva (100%), <br />
+Germany_TheGardenHedge kihagyva (100%), <br />
+USA_CalvaryOrCedarLawnCemetery kihagyva (100%), <br />
+Canada_YellowWarbler, not updated, 0.6599999999999966<br />
+USA_FlyingMUNZkey, not updated, 0.0<br />
+USA_ArchdaleButterfly kihagyva (100%), <br />
+USA_MayThe4thBeWithYou, <b>updated</b>, 51, <a href="https://www.munzee.com/map/9yymeuhrq/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MayThe4thBeWithYou.json" target="_blank">json</a><br />
