--- a/feladat.html
+++ b/feladat.html
@@ -1036,3 +1036,46 @@ Canada_YellowWarbler, not updated, 0.6599999999999966<br />
 USA_FlyingMUNZkey, not updated, 0.0<br />
 USA_ArchdaleButterfly kihagyva (100%), <br />
 USA_MayThe4thBeWithYou, <b>updated</b>, 51, <a href="https://www.munzee.com/map/9yymeuhrq/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MayThe4thBeWithYou.json" target="_blank">json</a><br />
+USA_ABunnyRabbit kihagyva (100%), <br />
+USA_AGrandRapidsValentine kihagyva (100%), <br />
+USA_AMooCow kihagyva (100%), <br />
+USA_GrandRapidsColor kihagyva (100%), <br />
+USA_GrandRapidsFlatsAndWeapons kihagyva (100%), <br />
+USA_GrandRapidsFlatsAndWeaponsFlats kihagyva (100%), <br />
+USA_MasonM kihagyva (100%), <br />
+USA_DecaturBaitPatch kihagyva (100%), <br />
+USA_DecaturFarm kihagyva (100%), <br />
+USA_ADecaturValentine kihagyva (100%), <br />
+USA_DecaturCornucopia kihagyva (100%), <br />
+Slovakia_BojniceCastle, not updated, 0.0<br />
+Slovakia_HexagonsOfVrutky kihagyva (100%), <br />
+Slovakia_ShamrockIhro, not updated, 0.0<br />
+Slovakia_ShamrockIhroFlats, not updated, 0.0<br />
+Slovakia_ChickVrutky kihagyva (100%), <br />
+Canada_KitsBeachRubberBall, not updated, 0.0<br />
+USA_BrandisButterfly, not updated, 0.9399999999999977<br />
+Japan_OsakaOctopus kihagyva (100%), <br />
+Australia_JubileeButterfly, not updated, 0.0<br />
+USA_EMSStarOfLife, not updated, 0.0<br />
+Slovakia_TrainMartin kihagyva (100%), <br />
+Slovakia_CrazyFrog kihagyva (100%), <br />
+Slovakia_BikeKolonka kihagyva (100%), <br />
+Slovakia_EdisonLightBulb kihagyva (100%), <br />
+Slovakia_TheOwletBubolet kihagyva (100%), <br />
+Slovakia_SrdcePreMoni kihagyva (100%), <br />
+Slovakia_LuckyClover, not updated, 0.0<br />
+Slovakia_QRateOpenerDNV kihagyva (100%), <br />
+Slovakia_KeyToTheHappiness, not updated, 0.0<br />
+Slovakia_AlfredWetzlerMiniFlat kihagyva (100%), <br />
+Slovakia_FloraOrientalisInZdiar kihagyva (100%), <br />
+Slovakia_VoidPinVrutky, not updated, 0.0<br />
+Slovakia_BBTrain kihagyva (100%), <br />
+Slovakia_LittleOwlInRoznava kihagyva (100%), <br />
+Slovakia_KUMABearRaca, not updated, 0.0<br />
+----csoportok<br />
+----városok<br />
+USA_city_SaintCharles, <b>updated</b>, <a href="https://www.munzee.com/map/9yzssvpyq/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintCharles.json" target="_blank">json</a><br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.04.01 02:03:31<br />
+összesen 3198<br />
