--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.04.01 01:10:12<br />
+<b>start</b> - 2023.04.02 01:10:10<br />
 Slovakia_Giraffe, not updated, 0.9000000000000057<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.21000000000000085<br />
-Hungary_VotiveChurch, not updated, -34.480000000000004<br />
+Hungary_VotiveChurch, not updated, -33.31<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -43,7 +43,7 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.9661835748792278<br />
-USA_Turtle, not updated, 0.6172839506172849<br />
+USA_Turtle, not updated, 0.7054673721340379<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.4399999999999977<br />
 Lithuania_KaunasBasketball, not updated, 0.7000000000000028<br />
@@ -852,7 +852,7 @@ USA_GGamingTable, not updated, 0.8500000000000014<br />
 USA_PotOfGold, not updated, 0.0<br />
 USA_WitchsHat, not updated, 0.0<br />
 USA_OwensboroRiverboat, not updated, 0.0<br />
-USA_OwensboroRiverboatFlats, not updated, 0.08000000000000007<br />
+USA_OwensboroRiverboatFlats, not updated, 0.11000000000000032<br />
 Lithuania_SeskinesSkulpturyParkas, not updated, 0.6600000000000037<br />
 Netherlands_RobAndLouise kihagyva (100%), <br />
 USA_TaylorSwiftTheEras, not updated, 0.0<br />
@@ -871,211 +871,4 @@ USA_WalkieTalkieWatch kihagyva (100%), <br />
 USA_StPetersNVG kihagyva (100%), <br />
 USA_FoxHillFit, not updated, 0.7999999999999972<br />
 USA_CelticKnot, not updated, 0.0<br />
-USA_STLPirateShip, not updated, 0.7700000000000102<br />
-USA_BluesMunzee, not updated, 0.0<br />
-USA_HowellViking, not updated, 0.25<br />
-USA_STLPokeball, not updated, 0.6000000000000014<br />
-USA_STLTardis, not updated, 0.0<br />
-USA_KirkwoodEvolutions1, not updated, 0.0<br />
-USA_KirkwoodEvolutions2, not updated, 0.0<br />
-USA_KirkwoodEvolutions3, not updated, 0.0<br />
-USA_KirkwoodEvolutions4, not updated, 0.0<br />
-USA_KirkwoodEvolutions5, not updated, 0.0<br />
-USA_KirkwoodEvolutions6 kihagyva (100%), <br />
-USA_KirkwoodEvolutions7, not updated, 0.09999999999999964<br />
-USA_Woodpecker, not updated, 0.8599999999999994<br />
-USA_ZBriefcase kihagyva (100%), <br />
-USA_WinterCardinalFeather kihagyva (100%), <br />
-USA_Chickadee kihagyva (100%), <br />
-USA_FlatDogBone kihagyva (100%), <br />
-USA_NyisutterBday kihagyva (100%), <br />
-USA_Cornucopia kihagyva (100%), <br />
-USA_StLouisRobin kihagyva (100%), <br />
-USA_FriendshipFliHiBrewery kihagyva (100%), <br />
-USA_SummerTree kihagyva (100%), <br />
-USA_ZeeSpyHat kihagyva (100%), <br />
-USA_WYMM kihagyva (100%), <br />
-USA_FlatObjectAnnex, not updated, 0.0<br />
-USA_StLFlatRob, not updated, 0.0<br />
-USA_StLFlatRobFlats kihagyva (100%), <br />
-USA_CottlevillePost kihagyva (100%), <br />
-USA_DaisyChain kihagyva (100%), <br />
-USA_TowerGrovePark kihagyva (100%), <br />
-USA_PiratesCannon kihagyva (100%), <br />
-USA_MothersDayBasket kihagyva (100%), <br />
-USA_Munzee11 kihagyva (100%), <br />
-UnitedKingdom_HeartBeatz kihagyva (100%), <br />
-USA_Scooter kihagyva (100%), <br />
-USA_YanktonIceCream kihagyva (100%), <br />
-UnitedKingdom_FlatsHideNSeek kihagyva (100%), <br />
-Australia_BendigoIcyPole kihagyva (100%), <br />
-USA_SouthPadreIslandKOA, not updated, 0.0<br />
-USA_HeartOfStCharles kihagyva (100%), <br />
-USA_ShawsGardenRose kihagyva (100%), <br />
-USA_WhiteCastleValentine kihagyva (100%), <br />
-USA_Ring kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckHotDog kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckIceCream kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckPizza kihagyva (100%), <br />
-USA_FrankieMartinsFoodTruckMug kihagyva (100%), <br />
-USA_CampingAtTheLake kihagyva (100%), <br />
-UnitedKingdom_TiffyTheNewmarketTabbyCat kihagyva (100%), <br />
-USA_GentleDoctorAnimals kihagyva (100%), <br />
-USA_KirkwoodVsWebsterGrovesLetters kihagyva (100%), <br />
-USA_KirkwoodVsWebsterGrovesFootball kihagyva (100%), <br />
-USA_BreadCo kihagyva (100%), <br />
-USA_Swon kihagyva (100%), <br />
-USA_ThankYouTruckers kihagyva (100%), <br />
-USA_CherryMini kihagyva (100%), <br />
-USA_BlossomMini kihagyva (100%), <br />
-USA_MarchMini kihagyva (100%), <br />
-USA_PiDay2022 kihagyva (100%), <br />
-USA_SpringTree kihagyva (100%), <br />
-USA_HeavySmokeBBQ kihagyva (100%), <br />
-USA_BowleroLaserTag kihagyva (100%), <br />
-USA_BohrerPark kihagyva (100%), <br />
-USA_Snowflake kihagyva (100%), <br />
-USA_WebsterGrovesStatesmen kihagyva (100%), <br />
-USA_ChristmasInWebsterGrovesVirtuals kihagyva (100%), <br />
-USA_ChristmasInWebsterGrovesFlats kihagyva (100%), <br />
-USA_WinterTree kihagyva (100%), <br />
-USA_AutumnTree kihagyva (100%), <br />
-USA_ZeeOps kihagyva (100%), <br />
-USA_StPetersChess kihagyva (100%), <br />
-USA_PiratesRum kihagyva (100%), <br />
-USA_NobHillFishTank kihagyva (100%), <br />
-USA_ChristmasSleigh kihagyva (100%), <br />
-USA_StLouisChristmasStockingVirtual kihagyva (100%), <br />
-USA_StLouisChristmasStockingFlat kihagyva (100%), <br />
-USA_JimmyBeagle kihagyva (100%), <br />
-USA_PirateAxe kihagyva (100%), <br />
-USA_ShamrocksMug kihagyva (100%), <br />
-USA_Halloween kihagyva (100%), <br />
-USA_AutumnMoon kihagyva (100%), <br />
-USA_Rosesquirrel kihagyva (100%), <br />
-USA_Campfire kihagyva (100%), <br />
-USA_GiftOfLife kihagyva (100%), <br />
-USA_PirateLongsword kihagyva (100%), <br />
-USA_WarriorSpear kihagyva (100%), <br />
-USA_PizzaOnTheHill kihagyva (100%), <br />
-USA_StLouisFlamingo kihagyva (100%), <br />
-USA_PirateCrossbow kihagyva (100%), <br />
-USA_Munzee10 kihagyva (100%), <br />
-USA_SybergsShark kihagyva (100%), <br />
-USA_ChuckECheesePizza kihagyva (100%), <br />
-USA_9Mile kihagyva (100%), <br />
-USA_MothersDayFlowerPot kihagyva (100%), <br />
-USA_TurtlePark kihagyva (100%), <br />
-USA_StacyParkFlower kihagyva (100%), <br />
-USA_CottlevilleDragonfly kihagyva (100%), <br />
-USA_SchaeferParkBugs kihagyva (100%), <br />
-USA_StLouisCardinalsPart2, not updated, 0.0<br />
-USA_TattooedDog kihagyva (100%), <br />
-USA_TiemeyerPatch kihagyva (100%), <br />
-USA_CincoDeMayoTaco kihagyva (100%), <br />
-USA_OverlandCar kihagyva (100%), <br />
-USA_FriscoTrain kihagyva (100%), <br />
-USA_StLouisAirplane kihagyva (100%), <br />
-USA_PiDayPie kihagyva (100%), <br />
-USA_AfftonHorse kihagyva (100%), <br />
-USA_KirkwoodAnchor kihagyva (100%), <br />
-USA_WalpelhorstHorse kihagyva (100%), <br />
-USA_StCharlesAnchor kihagyva (100%), <br />
-USA_Birdhouse kihagyva (100%), <br />
-USA_Cardinals kihagyva (100%), <br />
-USA_FlatFriends kihagyva (100%), <br />
-USA_FlatLouInStLou kihagyva (100%), <br />
-USA_FlatLouInStLouPink, not updated, 0.0<br />
-USA_Friendship kihagyva (100%), <br />
-USA_HappyKrautMemorial kihagyva (100%), <br />
-USA_OFallonSoccer kihagyva (100%), <br />
-USA_PirateCouchPotatoPatch kihagyva (100%), <br />
-USA_BuckeyesGradCap, not updated, 0.0<br />
-Germany_SmellsLikeZeeSpiritKurtCobain, <b>updated</b>, 925, <a href="https://www.munzee.com/map/u0ws1b5wm/14.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_SmellsLikeZeeSpiritKurtCobain.json" target="_blank">json</a><br />
-Poland_BirthdayCake kihagyva (100%), <br />
-Germany_WipperfurtherSternchen, not updated, 0.0<br />
-UnitedKingdom_BluewaterFlatBlueWhale, not updated, 0.0<br />
-USA_SummerSun kihagyva (100%), <br />
-USA_RosesquirrelsAutismPuzzlePiece kihagyva (100%), <br />
-USA_StLouisCardinalsOFallon kihagyva (100%), <br />
-USA_ShrewsburyNightVisionGoggles kihagyva (100%), <br />
-USA_SouthCountyChristmasTree kihagyva (100%), <br />
-USA_TucsonChess, not updated, 0.20000000000000107<br />
-USA_SpongyMemorial kihagyva (100%), <br />
-USA_StLouisParrot kihagyva (100%), <br />
-USA_ColorStPeters kihagyva (100%), <br />
-USA_MarylandHeightsMORUM kihagyva (100%), <br />
-USA_MissouriBluebird kihagyva (100%), <br />
-Canada_RichmondHillMoosemate, not updated, 0.0<br />
-USA_PiDay2023 kihagyva (100%), <br />
-USA_SpringCherryBlossom kihagyva (100%), <br />
-USA_AppleMini, <b>updated</b>, 31, <a href="https://www.munzee.com/map/9yzse4pep/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AppleMini.json" target="_blank">json</a><br />
-USA_BevoMill kihagyva (100%), <br />
-USA_VanderbiltPuppy kihagyva (100%), <br />
-USA_PiecesMeeple kihagyva (100%), <br />
-USA_LogCabinQuilt kihagyva (100%), <br />
-USA_SnowmanSaintPeters kihagyva (100%), <br />
-USA_WinterDeadBranch kihagyva (100%), <br />
-USA_CandyCaneLane kihagyva (100%), <br />
-USA_MiniSnowflake2 kihagyva (100%), <br />
-USA_BirdhousesGoldfinch kihagyva (100%), <br />
-USA_PecanMini kihagyva (100%), <br />
-USA_AcornMini kihagyva (100%), <br />
-USA_MizzouTiger, not updated, 0.0<br />
-USA_CamoHeart, not updated, 0.0<br />
-USA_ColumbiaFlatLou, not updated, 0.0<br />
-USA_ColumbiaFlatLouPink, not updated, 0.0<br />
-USA_FriscoPark kihagyva (100%), <br />
-USA_GRMeijerFarm, not updated, 0.0<br />
-USA_SecondaryComplexEverything, not updated, 0.0<br />
-USA_SecondaryComplexEverythingFlats, not updated, 0.0<br />
-USA_GrandRapidsCornucopia kihagyva (100%), <br />
-Germany_TheGardenHedge kihagyva (100%), <br />
-USA_CalvaryOrCedarLawnCemetery kihagyva (100%), <br />
-Canada_YellowWarbler, not updated, 0.6599999999999966<br />
-USA_FlyingMUNZkey, not updated, 0.0<br />
-USA_ArchdaleButterfly kihagyva (100%), <br />
-USA_MayThe4thBeWithYou, <b>updated</b>, 51, <a href="https://www.munzee.com/map/9yymeuhrq/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_MayThe4thBeWithYou.json" target="_blank">json</a><br />
-USA_ABunnyRabbit kihagyva (100%), <br />
-USA_AGrandRapidsValentine kihagyva (100%), <br />
-USA_AMooCow kihagyva (100%), <br />
-USA_GrandRapidsColor kihagyva (100%), <br />
-USA_GrandRapidsFlatsAndWeapons kihagyva (100%), <br />
-USA_GrandRapidsFlatsAndWeaponsFlats kihagyva (100%), <br />
-USA_MasonM kihagyva (100%), <br />
-USA_DecaturBaitPatch kihagyva (100%), <br />
-USA_DecaturFarm kihagyva (100%), <br />
-USA_ADecaturValentine kihagyva (100%), <br />
-USA_DecaturCornucopia kihagyva (100%), <br />
-Slovakia_BojniceCastle, not updated, 0.0<br />
-Slovakia_HexagonsOfVrutky kihagyva (100%), <br />
-Slovakia_ShamrockIhro, not updated, 0.0<br />
-Slovakia_ShamrockIhroFlats, not updated, 0.0<br />
-Slovakia_ChickVrutky kihagyva (100%), <br />
-Canada_KitsBeachRubberBall, not updated, 0.0<br />
-USA_BrandisButterfly, not updated, 0.9399999999999977<br />
-Japan_OsakaOctopus kihagyva (100%), <br />
-Australia_JubileeButterfly, not updated, 0.0<br />
-USA_EMSStarOfLife, not updated, 0.0<br />
-Slovakia_TrainMartin kihagyva (100%), <br />
-Slovakia_CrazyFrog kihagyva (100%), <br />
-Slovakia_BikeKolonka kihagyva (100%), <br />
-Slovakia_EdisonLightBulb kihagyva (100%), <br />
-Slovakia_TheOwletBubolet kihagyva (100%), <br />
-Slovakia_SrdcePreMoni kihagyva (100%), <br />
-Slovakia_LuckyClover, not updated, 0.0<br />
-Slovakia_QRateOpenerDNV kihagyva (100%), <br />
-Slovakia_KeyToTheHappiness, not updated, 0.0<br />
-Slovakia_AlfredWetzlerMiniFlat kihagyva (100%), <br />
-Slovakia_FloraOrientalisInZdiar kihagyva (100%), <br />
-Slovakia_VoidPinVrutky, not updated, 0.0<br />
-Slovakia_BBTrain kihagyva (100%), <br />
-Slovakia_LittleOwlInRoznava kihagyva (100%), <br />
-Slovakia_KUMABearRaca, not updated, 0.0<br />
-----csoportok<br />
-----városok<br />
-USA_city_SaintCharles, <b>updated</b>, <a href="https://www.munzee.com/map/9yzssvpyq/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_SaintCharles.json" target="_blank">json</a><br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2023.04.01 02:03:31<br />
-összesen 3198<br />
+USA_STLPirateShip, <b>updated</b>, 231, <a href="https://www.munzee.com/map/9yzssvpyq/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_STLPirateShip.json" target="_blank">json</a><br />
